--- a/index.Rmd
+++ b/index.Rmd
@@ -34,7 +34,6 @@ knitr::opts_chunk$set(echo = FALSE)
 ::: {#titlepage}
 
 
-
 :::: {#bloc-marianne}
 ![Marianne — Liberté, égalité, fraternité](images/marianne.svg)
 
@@ -46,7 +45,7 @@ knitr::opts_chunk$set(echo = FALSE)
 ::::
 
 
-:::: {#header}
+::::{#header}
 
 # La démarche PROPRE
 
@@ -60,90 +59,150 @@ knitr::opts_chunk$set(echo = FALSE)
 <!-- ![ test ](images/online-community.svg) -->
 ![ test ](images/drawkit-content-man-monochrome.svg)
 
-
-
 :::
-
- 
 
 
 :::{.page2}
 
 ::::{.header}
-## La thérorie et la pratique
 
-Qui cherche à faire quoi, et comment.  ex anim duis cupidatat ea exercitation. Aute officia sit magna non aute Lorem. Tempor occaecat proident proident irure Lorem veniam exercitation aliqua sunt sit occaecat eiusmod aliqua commodo.
-::::
-
-::::{.sub}
-![](images/calendar-monochrome.svg)
-
-### Open Source au cœur. 
-Open source = service public 2.0 (lololol);
-État qui veut mettre toute ses innovations en licence open source
-Ullamco esse do dolore sint labore duis ipsum dolore culpa irure et quis. Cupidatat nisi nisi pariatur cillum ut exercitation anim. Voluptate fugiat magna do deserunt aliquip quis occaecat tempor ipsum incididunt veniam occaecat esse labore.
-Voluptate aute culpa enim officia voluptate in ea sunt. Enim magna enim nisi sunt. Esse aliqua proident adipisicing nisi eiusmod labore. Labore consequat nisi dolor cillum ea. Ea aliqua culpa ex dolore in esse proident. Reprehenderit commodo sint do adipisicing cupidatat culpa minim enim reprehenderit sint id. Adipisicing cillum adipisicing tempor duis officia do aute ullamco adipisicing pariatur minim ut incididunt excepteur.
-::::
-
-::::{.sub}
-
-![](images/calendar-monochrome.svg)
-
-### Délais raccourcis
-Voluptate aute culpa enim officia voluptate in ea sunt. Enim magna enim nisi sunt. Esse aliqua proident adipisicing nisi eiusmod labore. Labore consequat nisi dolor cillum ea. Ea aliqua culpa ex dolore in esse proident. Reprehenderit commodo sint do adipisicing cupidatat culpa minim enim reprehenderit sint id. Adipisicing cillum adipisicing tempor duis officia do aute ullamco adipisicing pariatur minim ut incididunt excepteur.
+Depuis 2015, le datalab de la DREAL Pays de la Loire a expérimenté de nouvelles méthodes de travail autour du *Design Thinking* et des process agile pour réaliser ses publications statistiques. En opérant le pivot d'une culture de la donnée vers une culture logicielle, il se dote de PROPRE pour PROcessus de Publications REproductibles et métamorphose son métier. Premier exemple de cette évolution, le rapport sur __le parc logement locatif social__.
 
 ::::
 
 ::::{.sub}
 
-![](images/calendar-monochrome.svg)
+La démarche repose sur une adapation à la publication d'analyses statistiques - en ligne sous forme de pages ou d'applications interactives- des principes de développement logiciel dits DevOps. Cette approche prône un continuum entre les Dev (chargés de développer de nouvelles solutions, d'innover) et les Ops (garants de l'intégrité des systèmes, de sa stabilité) en plaçant l'utilisateur au cœur de ses préoccupations des uns et des autres. C'est une coopération de fait où chacun des maillons prend sa part de responsabilité en se préoccupant de ce qui se passe en aval. 
+
+### R, le langage commun
+
+R est particulièrement adapté à une approche intégrée de la donnée : tout peut être mis en place dans ce même langage. Que ce soit pour la structuration des données, pour leur analyse, ou pour leur mise en page, il n’est plus nécessaire de faire transiter les données d’une application à une autre. Propre est une chaîne de publication normalisée dans laquelle R devient un langage commun entre les agents chargés du contenu, et ceux chargés de la fabrication des outils, dans un principe d’organisation emprunté au développement logiciel, le *DevOps*.
+
+### Devops
+
+Approche prône un *continuum* entre les *Dev* (chargés de développer de nouvelles solutions) et les *Ops* (garants de l'intégrité et de la stabilité des systèmes) en plaçant l'utilisateur au cœur des préoccupations. L’innovation se fait grâce au travail commun de l’ensemble des membres de l’équipe, dans une coopération de fait où chaque partie prenante prend sa part de responsabilité en se préoccupant de ce qui se passe en amont et de ce qui est attendu en aval.
+
+### Évolution des agents
+
+Dans le cadre du rapport LLS, deux équipes se sont coordonnées pour construire l’outil de publication: une équipe éditoriale, garante des contenues et des propos, et l’équipe de développement, chargé de livrer les fonctionnalités nécessaire à la réussite de la publication. L’ensemble des décisions étaient traduite en simulation de publication, offrant un espace d’échanges aux équipes permettant aux un de comprendre les problématiques éditoriales et aux autres les problématiques techniques. Ainsi le passage de relai continu à offert à chacun une compréhension du travail de l’autre et une montée en compétences réutilisable dans d’autres espaces. De plus, la mise en place du paquet a été l’objet d’une documentation pour rendre facile la réutilisation de l’ensemble des outils développés.
+
+### La forge logicielle
+
+Pour qu’une telle organisation puisse se mettre en place, la démarche Propre s’appuie sur une forge logicielle, le lieu de façonnage des publications. Elle est construite autour d’un outil qui monitore et sécurise les modifications du code et du contenu. À chaque mise à jour, la conformité du résultat face aux attentes est vérifié par un ensemble de test automatisés, et contrôlé par un regard humain, avec la possibilité de revenir en arrière à tout moment. Cette *intégration continue* est aussi permise grace à un ensemble d’outils de communications, qu’il s’agisse de commentaires directement au niveau du code ou d’espaces de conversations synchrones ou asynchrones. 
+
+### Mutualisé
+
+Le paquet R est la brique réutilisable à la base de la démarche Propre. Il est à la fois le contenu, sa mise en forme, ses fonctionnalités, sa documentation et ses test. L’ensemble de ses propriétés autoportantes lui confèrent intégrité, maintenabilité et pérénnité, devenant une solution prête à l'emploi pour les situations équivalentes. L’aptitude à concevoir des paquets R est une nouvelle compétence pour les agents, transposables dans ses principes à d'autres développements logiciels. De plus, la maintenance du paquet, et son évolution, est partagée entre tous les acteurs, qui peuvent développer une fonctionnalité pour répondre à leur besoin, et, ainsi apporter un outil de plus à l’ensemble des utilisateurs du paquet. L'objet produit dans la démarche PROPRE concentre ainsi le fruit d'une intelligence collective, en lien avec l’évolution des usages et les métiers des agents.
 
 
-### La forge
-- les outils :
-Ullamco esse do dolore sint labore duis ipsum dolore culpa irure et quis. Cupidatat nisi nisi pariatur cillum ut exercitation anim. Voluptate fugiat magna do deserunt aliquip quis occaecat tempor ipsum incididunt veniam occaecat esse labore.
+### Mise en forme & maintenance
+Les contenus sont élaborés en parallèle de leur mise en forme : en respectant le principe de séparation des préoccupations, Propre est une chaîne de publication réactive bénéficiant d'une mise en forme automatisée. Une mise à jour du fond présentera un résultat toujours homogène dans sa mise en forme et une mise à jour de la mise en forme pourra être répercutée sur tous les contenus. Les tests, intrinsèques à la démarche, enrayent d'éventuels effets de bord. La mise à jour du document est ainsi produite au fur et à mesure que les données sont actualisées. Et puisque les éléments sont rédigés et développés de manière sémantique, il est possible de les rendre lisible dans un rapport imprimé, sur un terminal mobile, un écran ou une application, offrant de plus grandes possibilités d’intéraction pour l’utilisateur, lui permettant de naviguer dans des contenus souvent complexes, dans les conditions qui lui permettront de prendre les meilleures décisions. 
+
+### Pour en savoir plus
+
+Pour en savoir plus sur la démarche, vous pouvez vous mettre en relation avec juliette.engelaere@developpement-durable.gouv.fr ou mael.theuliere@developpement-durable.gouv.fr, à l' initiative de la démarche
+
+- Quelques mots sur la démarche : https://gitlab.com/rdes_dreal/propre.rpls/-/wikis/d%C3%A9marche%20propre
+- Le code source du paquet : https://gitlab.com/rdes_dreal/propre.rpls
+- La documentation technique : https://rdes_dreal.gitlab.io/propre.rpls/dev/articles/aa-prise-en-main.html
+- La trame des publications : https://gitlab.com/rdes_dreal/propre.rpls/-/wikis/Trame-de-publication-r%C3%A9gionale-RPLS
+- Les supports de formation : à compléter
+- D'autres projets PROPRE : ITDD, Logement accessible de la DRIHL ? 
 
 ::::
 
-::::{.sub}
+::::{.chiffres}
+## Quelques chiffres
 
-![](images/calendar-monochrome.svg)
-
-
-### La forge
-
-Ullamco esse do dolore sint labore duis ipsum dolore culpa irure et quis. Cupidatat nisi nisi pariatur cillum ut exercitation anim. Voluptate fugiat magna do deserunt aliquip quis occaecat tempor ipsum incididunt veniam occaecat esse labore.
-Voluptate aute culpa enim officia voluptate in ea sunt. Enim magna enim nisi sunt. Esse aliqua proident adipisicing nisi eiusmod labore. Labore consequat nisi dolor cillum ea. Ea aliqua culpa ex dolore in esse proident. Reprehenderit commodo sint do adipisicing cupidatat culpa minim enim reprehenderit sint id. Adipisicing cillum adipisicing tempor duis officia do aute ullamco adipisicing pariatur minim ut incididunt excepteur.
+- 7 DREAL mobilisées
+- 1 agent du SDES impliqué
+- 4,9 k messages asynchrones
+- 5 réunions synchrones
+- une forge publique qui compte un projet déployé et un guide de publication
+- 146 tickets (dont 114 clos) et 215 commits pour `{propre.rpls}`
+- 166 demandes de rapatriement de code validé (merge request)
+- deux versions du paquet `{propre.rpls}`
+- un couverture du code par les tests de 96 %
 
 ::::
 
 :::
-
-:::{.page3}
-## titre de la page 3
-
-Concept à déployer
-
-- changement de méthode de travail
-- la forge
-- meilleure collaboration (responsabilisation du contenu)
-- anticipation des problèmes 
-- les utilisateurs 
-:::
-
 
 :::{.page4}
-## pour aller plus loin
 
-### Glossaire (marche en note de colonnes.)
+::::{.etapes}
 
- 
+:::{.header}
+## un processus technique reproductible, par étape
+
+En adoptant la démarche Propre, les flux opérationnels deviennent plus techniques car ils demandent plus de connaissances et de compétences logicielles mais la nature des travaux s'en trouve plus enrichie. Le processus est sécurisé et fiable car reproductible, versionné et intégré.
+:::
+
+:::::{.etape}
+
+### Avant la démarche Propre
+
+1. Se rendre sur un site de partage de données (type open data)
+
+1. Télécharger dans un répertoire plusieurs séries de données correspondant à plusieurs millésimes
+
+1. Déplacer les données dans un répertoire de travail ad hoc
+
+1. Tenter d’ouvrir des données csv d’un millésime dans Excel
+
+1. Constater que les virgules font office de séparateur de milliers et le point de séparateur décimal
+
+1. Ouvrir le document dans un éditeur de texte pour y effectuer un rechercher-remplacer
+
+1. Ouvrir avec le succès le document dans Excel
+
+1. Réitérer les opérations pour les autres millésimes
+
+1. Réaliser les transformations et manipulations à l’aide d’onglets, formules, copier-coller disséminés dans l’ensemble du classeur
+
+1. Tracer les graphiques à des fins exploratoires
+
+1. Tracer les graphiques à des fins de communication
+
+1. Réitérer pour les autres millésimes et constater que certaines données manquent, certains graphiques ne sont pas pertinents, certains tableaux incomplets (parce que données manquantes, modalités incomplètes…)
+
+1. Ouvrir un document Word, commencer à rédiger, y copier-coller les graphiques et tableaux désirés
+
+1. Envoyer le document à ses collègues/supérieurs pour révision
+
+1. Recevoir le suivi de modification
+
+1. Opérer des changements dans le fichier Excel
+
+1. Copier-coller les modifications dans le fichier Word
+
+1. Être notifié (dans le meilleur des cas) d’une modification dans le fichier source
+
+1. Se sentir découragé et inefficace (à raison) à l’idée de devoir tout recommencer.
+
+:::::
+
+:::::{.etape}
+
+### Avec la démarche Propre
+1. Créer un nouveau projet
+2. Appeler les jeux de données
+3. Filtrer, agréger, résumer, transformer, modéliser, prédire, et ce dans un langage clair, lisible, « qui dit ce qu’il fait et qui fait ce qu’il dit » 
+4. Utiliser la programmation fonctionnelle pour sécuriser et paralléliser les sorties ou outputs (calculs, tableaux, graphiques, et rapports complets) dans R
+5. Soumettre les résultats à ses collègues/supérieurs en temps réel via des outils dédiés et performants (comme gitlab)
+6. Rejouer les analyses à la demande dans R (y compris en cas de modification des sources)
+7. Diffuser (en ligne, sur un serveur de partage, par envoi de mail…) depuis R et de façon automatique et intégrée
+
+:::::
+
+::::
+
+
 ::::{.colophon}
 
 ### Colophon
 
 Ce document a été fabriqué ....
-
 
 
 ::::
@@ -162,19 +221,16 @@ PagedConfig.auto=true;
 
 # La démarche PROPRE
 
-Et s’il existait un outil mutualisé, presque clef en main, qui permettrait aux DREAL/DEAL de publier périodiquement leurs analyses de façon homogène et dans des délais raccourcis ?
-
 ---
 
-## Innover dans les processus de publications
-
-Pour réaliser ses publications statistiques, le datalab de la DREAL Pays de la Loire s'est équipé depuis 2015 de méthodes de travail telles que le Design Thinking et l'agilité. Il a également positionné R, langage de programmation statistique open source, au coeur des exploitations des données collectées, sécurisées et structurées en son sein pour adresser ses missions. En opérant le pivot d'une culture de la donnée vers une culture logicielle avec R, il se dote de PROPRE pour PROcessus de Publications REproductibles et métamorphose son métier.    
+## Innover dans les processus de&nbsp;publications
 
 
- 
+
+
 ### Rapide et intégré
 
-La démarche repose sur une adapation à la publication d'analyses statistiques - en ligne sous forme de pages ou d'applications interactives- des principes de développement logiciel dits DevOps. Cette approche prône un continuum entre les Dev (chargés de développer de nouvelles solutions, d'innover) et les Ops (garants de l'intégrité des systèmes, de sa stabilité) en plaçant l'utilisateur au coeur de ses préoccupations des uns et des autres. C'est une coopération de fait où chacun des maillons prend sa part de responsabilité en se préoccupant de ce qui se passe en aval. R est particulièrement adapté à une approche intégrée de la donnée : tout peut être programmé dans ce même langage, de la collecte à la communication sur le web.  
+La démarche repose sur une adapation à la publication d'analyses statistiques - en ligne sous forme de pages ou d'applications interactives- des principes de développement logiciel dits DevOps. Cette approche prône un continuum entre les Dev (chargés de développer de nouvelles solutions, d'innover) et les Ops (garants de l'intégrité des systèmes, de sa stabilité) en plaçant l'utilisateur au cœur de ses préoccupations des uns et des autres. C'est une coopération de fait où chacun des maillons prend sa part de responsabilité en se préoccupant de ce qui se passe en aval. 
 
 
 ### Clé en main
@@ -238,43 +294,43 @@ L'essence de la démarche PROPRE réside dans la traque impitoyable et inflexibl
 ### un processus long, complexe et sujet à erreur
 
 
-- Se rendre sur un site de partage de données (type open data)
+1. Se rendre sur un site de partage de données (type open data)
 
-- Télécharger dans un répertoire plusieurs séries de données correspondant à plusieurs millésimes
+1. Télécharger dans un répertoire plusieurs séries de données correspondant à plusieurs millésimes
 
-- Déplacer les données dans un répertoire de travail ad hoc
+1. Déplacer les données dans un répertoire de travail ad hoc
 
-- Tenter d’ouvrir des données csv d’un millésime dans Excel
+1. Tenter d’ouvrir des données csv d’un millésime dans Excel
 
-- Constater que les virgules font office de séparateur de milliers et le point de séparateur décimal
+1. Constater que les virgules font office de séparateur de milliers et le point de séparateur décimal
 
-- Ouvrir le document dans un éditeur de texte pour y effectuer un rechercher-remplacer
+1. Ouvrir le document dans un éditeur de texte pour y effectuer un rechercher-remplacer
 
-- Ouvrir avec le succès le document dans Excel
+1. Ouvrir avec le succès le document dans Excel
 
-- Réitérer les opérations pour les autres millésimes
+1. Réitérer les opérations pour les autres millésimes
 
-- Réaliser les transformations et manipulations à l’aide d’onglets, formules, copier-coller disséminés dans l’ensemble du classeur
+1. Réaliser les transformations et manipulations à l’aide d’onglets, formules, copier-coller disséminés dans l’ensemble du classeur
 
-- Tracer les graphiques à des fins exploratoires
+1. Tracer les graphiques à des fins exploratoires
 
-- Tracer les graphiques à des fins de communication
+1. Tracer les graphiques à des fins de communication
 
-- Réitérer pour les autres millésimes et constater que certaines données manquent, certains graphiques ne sont pas pertinents, certains tableaux incomplets (parce que données manquantes, modalités incomplètes…)
+1. Réitérer pour les autres millésimes et constater que certaines données manquent, certains graphiques ne sont pas pertinents, certains tableaux incomplets (parce que données manquantes, modalités incomplètes…)
 
-- Ouvrir un document Word, commencer à rédiger, y copier-coller les graphiques et tableaux désirés
+1. Ouvrir un document Word, commencer à rédiger, y copier-coller les graphiques et tableaux désirés
 
-- Envoyer le document à ses collègues/supérieurs pour révision
+1. Envoyer le document à ses collègues/supérieurs pour révision
 
-- Recevoir le suivi de modification
+1. Recevoir le suivi de modification
 
-- Opérer des changements dans le fichier Excel
+1. Opérer des changements dans le fichier Excel
 
-- Copier-coller les modifications dans le fichier Word
+1. Copier-coller les modifications dans le fichier Word
 
-- Être notifié (dans le meilleur des cas) d’une modification dans le fichier source
+1. Être notifié (dans le meilleur des cas) d’une modification dans le fichier source
 
-- Se sentir découragé et inefficace (à raison) à l’idée de devoir tout recommencer.
+1. Se sentir découragé et inefficace (à raison) à l’idée de devoir tout recommencer.
 
 vs 
 
@@ -311,3 +367,41 @@ D'autres projets PROPRE : ITDD, Logement accessible de la DRIHL ?
 
 
 
+
+
+
+```{js, echo=FALSE}
+class cleanLinks extends Paged.Handler {
+    constructor(chunker, polisher, caller) {
+      super(chunker, polisher, caller);
+    }
+
+  beforeParsed(content) {
+    cleanLink(content)
+  }
+}
+
+function cleanLink(content) {
+    //add wbr to / in links
+    const links = content.querySelectorAll('a[href^="http"], a[href^="www"]');
+    links.forEach(link => {
+      // Rerun to avoid large spaces. Break after a colon or a double slash (//) or before a single slash (/), a tilde (~), a period, a comma, a hyphen, an underline (_), a question mark, a number sign, or a percent symbol.
+      const content = link.textContent;
+      let printableUrl = content.replace(/\/\//g, "//\u003Cwbr\u003E");
+      printableUrl = printableUrl.replace(/\,/g, ",\u003Cwbr\u003E");
+      // put wbr around everything.
+      printableUrl = printableUrl.replace(
+        /(\/|\~|\-|\.|\,|\_|\?|\#|\%)/g,
+        "\u003Cwbr\u003E$1"
+      );
+      // turn hyphen in non breaking hyphen
+      printableUrl = printableUrl.replace(/\-/g, "\u003Cwbr\u003E&#x2011;");
+      link.setAttribute("data-print-url", printableUrl);
+      link.innerHTML = printableUrl;
+    });
+  }
+  
+
+  Paged.registerHandlers(cleanLinks);
+
+```
